--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.bookmark-list {
-    font-weight: bold;
-    font-size: 2em;
-    padding: 6px;
-    margin-bottom: 10px; /* Add this line */
-}
-
 .add-bookmark-button {
     background-color: #4CAF50;
     border: none;
@@ -20,4 +13,76 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+}
+.latlng-separator {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.bookmark-header {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    font-weight: bold;
+    font-size: 35px;
+    padding: 2px;
+    margin-bottom: 0px;
+    margin-left: 20px;
+    text-decoration: underline;
+}
+
+.bookmark-subheader {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 2px;
+    margin-left: 25px;
+}
+
+.bookmark-button {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 8px 16px;
+    border-radius: 8px;
+    z-index: 1000;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    min-height: 50px;
+}
+
+.bookmark-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.bookmark-type {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.bookmark-description {
+    font-size: 0.9em;
+    margin: 0;
+}
+
+.bookmark-coordinates {
+    font-size: 0.8em;
+    color: white;
+}
+
+.bookmark {
+    margin-bottom: 10px;
 }
